# auto-vision-cut

./: .gitignore  LICENSE  README.md  main.py  prd.json  progress.txt  pyproject.toml  requirements.txt
src/autovideo/: __init__.py  analyze.py  assemble.py  audio.py  config.py  extract.py  generate.py  logging_setup.py  resume.py  retry.py  validate.py
tests/: conftest.py  test_analyze.py  test_assemble.py  test_audio.py  test_config.py  test_extract.py  test_generate.py  test_integration.py  test_logging.py  test_resume.py  test_retry.py  test_validate.py
