[project]
name = "autovideo"
version = "0.1.0"
description = "Local Vision-to-Script-to-Cut pipeline for processing OBS prototyping footage"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "moviepy>=2.0.0",
    "mlx>=0.14.0",
    "mlx-vlm>=0.1.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
